--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@supabase/supabase-js": "^2.49.10",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.9",
-    "expo-camera": "^16.1.6",
-    "expo-file-system": "^18.1.10",
-    "expo-image-manipulator": "^13.1.7",
-    "expo-image-picker": "^16.1.4",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-file-system": "~18.1.10",
+    "expo-haptics": "~14.1.4",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-media-library": "~17.1.6",
     "expo-notifications": "^0.31.2",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-uuid": "^2.0.3",
@@ -29,6 +37,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.8.3"
   },
   "private": true
