--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,22 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.*
+
+# API Keys & Secrets
+*.key
+secrets/
+config/secrets.js
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
