--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
+    "expo-local-authentication": "~16.0.4",
     "expo-media-library": "~17.1.6",
     "expo-notifications": "^0.31.2",
     "expo-secure-store": "~14.2.3",
