--- a/package.json
+++ b/package.json
@@ -1,45 +1,39 @@
 {
   "name": "glowmatch-ai-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@supabase/supabase-js": "^2.49.10",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
     "expo": "~53.0.9",
-    "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.7",
-    "expo-dev-client": "~5.2.0",
-    "expo-face-detector": "^13.0.2",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
     "expo-file-system": "~18.1.10",
     "expo-haptics": "~14.1.4",
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5",
+    "expo-linear-gradient": "~14.1.4",
     "expo-local-authentication": "~16.0.4",
     "expo-media-library": "~17.1.6",
-    "expo-notifications": "~0.31.3",
+    "expo-notifications": "^0.31.2",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
     "react-native-uuid": "^2.0.3",
-    "uuid": "^11.1.0",
-    "expo-build-properties": "~0.14.6"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
